# gpufanctl

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE  LICENSE-3RD-PARTY  README.md  gpufanctl.1
.github/workflows/: pull-request.yml
.versioning/changes/: AWcLkKItAf.minor.md  BqK8eVBk5u.minor.md  Fg6tdW4qut.minor.md  H3lekCLPHo.patch.md  HILdQkrPdu.patch.md  TCcypuvtcr.patch.md  TEhMmkPX7u.patch.md  Z6CpfSPlEi.patch.md  mcPzBCsYy2.minor.md
cmake/: Dependencies.cmake  MakeTest.cmake
fuzzing/: CMakeLists.txt  fuzz-curve.cpp
fuzzing/input/: input.txt
init/: CMakeLists.txt
init/runit/: run.in
init/systemd/: gpufanctl.service.in
src/: CMakeLists.txt  assertion.cpp  assertion.hpp  cmdline.cpp  cmdline.hpp  cmdline_validation.hpp  config.hpp.in  curve.cpp  curve.hpp  delimiter.cpp  delimiter.hpp  errors.cpp  errors.hpp  execution.hpp  interval.hpp  logging.cpp  logging.hpp  main.cpp  nvml.cpp  nvml.h  nvml.hpp  parameters.cpp  parameters.hpp  parsing.cpp  parsing.hpp  pid.cpp  pid.hpp  scope_guard.hpp  signal.cpp  signal.hpp  slope.cpp  slope.hpp  sticky_cancel_timer.cpp  sticky_cancel_timer.hpp  symbol.hpp  utils.hpp  validation.cpp  validation.hpp
src/execution/: README.md  assertion.hpp  box.hpp  connect.hpp  defer.hpp  get_stop_token.hpp  inline_delay_scheduler.hpp  inline_signal_scheduler.hpp  just_from.hpp  repeat_effect.hpp  schedule.hpp  single_thread_context.cpp  single_thread_context.hpp  start.hpp  stop_when.hpp  sync_wait.hpp  then.hpp
tests/: CMakeLists.txt  cmdline_tests.cpp  curve_parsing_tests.cpp  slope_tests.cpp  validation_tests.cpp
tests/execution/: CMakeLists.txt  execution_tests.cpp
tools/: make-dist
